<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_alarm_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dp">
...
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:contentDescription="@string/arrow_up"
                android:src="@drawable/ic_arrow_up" />

            <EditText
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
...
                android:layout_height="82sp"
                android:layout_gravity="center"
                android:contentDescription="@string/arrow_up"
                android:src="@drawable/ic_arrow_up" />

            <EditText
                android:id="@+id/minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLength="13"
            android:singleLine="true" />

...
