...
                app:showAsAction="ifRoom" />
        </menu>

    </item>

    <item
        android:id="@+id/game"
        android:icon="@drawable/ic_game"
        android:title="@string/configuration_of_the_game"
        app:showAsAction="ifRoom">

        <menu>
            <item
...
