<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_alarm"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/bright"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:textSize="25sp" />


    <ImageView
        android:id="@+id/activate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/bright"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="2"
        android:contentDescription="@string/alarm_on"
        android:src="@drawable/alarm_on" />

</LinearLayout>